syntax = "proto3";

package bank.identity.v1;

//option go_package = "github.com/your-org/your-repo/genproto/bank/identity/v1;identityv1";
//option java_multiple_files = true;
//option java_package = "com.bank.identity.v1";
option go_package = "github.com/imaginarybank/banking-contracts/gen/go/bank/identity/v1;identityv1";
option java_multiple_files = true;
option java_package = "bank.identity.v1";
option java_outer_classname = "IdentityProto";

import "google/protobuf/timestamp.proto";


// =========================================================
// Services
// =========================================================

service OnboardingService {
  // Start user registration (KYC)
  rpc StartRegistration(StartRegistrationRequest) returns (StartRegistrationResponse);
}

service OidcAuthService {
  // Start OIDC login (BFF)
  rpc StartOidcLogin(StartOidcLoginRequest) returns (StartOidcLoginResponse);

  // Complete OIDC login (BFF)
  rpc CompleteOidcLogin(CompleteOidcLoginRequest) returns (CompleteOidcLoginResponse);
  // Sesión server-side (banca)
  rpc RefreshSession(RefreshSessionRequest) returns (RefreshSessionResponse);
  rpc LogoutSession(LogoutSessionRequest) returns (LogoutSessionResponse);

  rpc GetSessionInfo(GetSessionInfoRequest) returns (GetSessionInfoResponse);


}

service WebauthnService {
  rpc BeginWebauthnRegistration(BeginWebauthnRegistrationRequest) returns (BeginWebauthnRegistrationResponse);
  rpc FinishWebauthnRegistration(FinishWebauthnRegistrationRequest) returns (FinishWebauthnRegistrationResponse);

  rpc BeginWebauthnAssertion(BeginWebauthnAssertionRequest) returns (BeginWebauthnAssertionResponse);
  rpc FinishWebauthnAssertion(FinishWebauthnAssertionRequest) returns (FinishWebauthnAssertionResponse);
}


// =========================================================
// Enums
// =========================================================

enum OccupationType {
  OCCUPATION_TYPE_UNSPECIFIED = 0;
  OCCUPATION_TYPE_STUDENT = 1;
  OCCUPATION_TYPE_EMPLOYEE = 2;
  OCCUPATION_TYPE_SELF_EMPLOYED = 3;
  OCCUPATION_TYPE_UNEMPLOYED = 4;
  OCCUPATION_TYPE_RETIRED = 5;
}

// =========================================================
// Messages
// =========================================================

// StartRegistrationRequest
// Datos KYC iniciales para crear intención de registro.
message StartRegistrationRequest {
  // OpenAPI: channel (example: web)
  string channel = 1;

  // Número de cédula.
  string national_id = 2;

  // OpenAPI: format date (YYYY-MM-DD). Se deja como string para no depender de google.type.Date.
  // Fecha de expedición de la cédula.
  string national_id_issue_date = 3;

  // Código dactilar.
  string fingerprint_code = 4;

  // Documento de identidad (cédula o pasaporte) en bytes.
  bytes id_document_front = 5;

  // Selfie del usuario en bytes.
    bytes selfie = 6;

  double monthly_income = 7;

  OccupationType occupation_type = 8;

  string email = 9; // format: email
  string phone = 10;
}

// StartRegistrationResponse
message StartRegistrationResponse {
  string registration_id = 1; // uuid
  string state = 2;           // example: started
  google.protobuf.Timestamp created_at = 3; // date-time
}

// StartOidcLoginRequest
message StartOidcLoginRequest {
  string channel = 1;              // example: web
  string redirect_after_login = 2; // example: /home
}

// StartOidcLoginResponse
message StartOidcLoginResponse {
  string authorization_url = 1; // uri
  string state = 2;
}

// CompleteOidcLoginRequest
message CompleteOidcLoginRequest {
  string code = 1;
  string state = 2;
  string ip = 3;         // format: ipv4 (se valida a nivel app)
  string user_agent = 4;
  string channel = 5;    // example: web
}

// CompleteOidcLoginResponse
message CompleteOidcLoginResponse {
  string identity_id = 1;     // uuid
  string subject_id_oidc = 2;
  string provider = 3;        // example: cognito
  OidcUser user = 4;
  string session_id = 5;          // uuid
  int64 session_expires_in = 6;   // seconds
  string redirect_after_login = 7;
  bool mfa_required = 8;
  bool mfa_verified = 9;
}

// OidcUser
message OidcUser {
  string name = 1;
  string email = 2; // format: email
  repeated string roles = 3;
}

// OidcTokens
message OidcTokens {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}


message RefreshSessionRequest {
  string session_id = 1; // uuid
  string ip = 2;
  string user_agent = 3;
}

message RefreshSessionResponse {
  string session_id = 1;        // uuid (rotado)
  int64 session_expires_in = 2; // seconds
}

message LogoutSessionRequest {
  string session_id = 1; // uuid
}

message LogoutSessionResponse {
  bool success = 1;
}

message GetSessionInfoRequest {
  string session_id = 1; // uuid
  string ip = 2;
  string user_agent = 3;
}

message GetSessionInfoResponse {
  string identity_id = 1;      // uuid
  string subject_id_oidc = 2;
  string provider = 3;  // example: cognito
  OidcUser user = 4;           // roles aquí
  string customer_id = 5;      // opcional si ya lo sabes en identity o lo enlazas
  string user_status = 6;      // ACTIVE|LOCKED|DISABLED
  int64 session_expires_in = 7;
  bool mfa_required = 8;
  bool mfa_verified = 9;
}

// =========================================================
// New messages for Webauthn
message BeginWebauthnRegistrationRequest {
  string identity_id = 1;  // uuid
  string device_name = 2;  // opcional
}

message BeginWebauthnRegistrationResponse {
  string request_id = 1;
  string options_json = 2; // JSON para navigator.credentials.create()
}

message FinishWebauthnRegistrationRequest {
  string request_id = 1;
  string credential_json = 2; // JSON del resultado de navigator.credentials.create()
}

message FinishWebauthnRegistrationResponse {
  bool success = 1;
}

message BeginWebauthnAssertionRequest {
  string identity_id = 1; // uuid
  string session_id = 2;  // uuid (sesión creada en OIDC)
}

message BeginWebauthnAssertionResponse {
  string request_id = 1;
  string options_json = 2; // JSON para navigator.credentials.get()
}

message FinishWebauthnAssertionRequest {
  string session_id = 1;     // uuid
  string request_id = 2;
  string credential_json = 3; // JSON del resultado de navigator.credentials.get()
}

message FinishWebauthnAssertionResponse {
  bool success = 1;
}
